--- a/SiMP3/SiMP3.csproj
+++ b/SiMP3/SiMP3.csproj
@@ -61,6 +61,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.5" />
+		<PackageReference Include="NLayer" Version="1.16.0" />
 		<PackageReference Include="Plugin.Maui.Audio" Version="4.0.0" />
 		<PackageReference Include="TagLibSharp" Version="2.3.0" />
 	</ItemGroup>
