Патч Проведено фікс роботи оверлею full player, шляхом переведення з кривого оверлею на рівні сторінки, до глобального рівню shell

--- a/SiMP3/SiMP3.csproj
+++ b/SiMP3/SiMP3.csproj
@@ -82,6 +82,9 @@
 	  <MauiXaml Update="Views\AndroidMainPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\FullPlayerPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\PlaylistEditorPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
